kubernetes-networks/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: web-server-gateway
  namespace: homework
spec:
  gatewayClassName: web-server-class-net
  listeners:
    - name: http
      protocol: HTTP
      port: 8000
      hostname: "homework.otus"
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: web-server-class-net
spec:
  controllerName: traefik.io/gateway-controller
